selfhost/test/parser/strings_interpolation_error_invalid_expression.1.out
Error at %FILE_NAME%:1:6
Unexpected token 'identifier':
  |  "${a b}after"
          ^